more responsive fixes

--- a/kenntnisse/apps.html
+++ b/kenntnisse/apps.html
@@ -9,6 +9,7 @@ devicons:
   - appstore
   - swift
   - git
+  - responsive
 ---
 
 <section class="cards" id="skills-cards">
@@ -25,9 +26,9 @@ devicons:
             <h4>App-Entwicklung</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/rails.svg" alt="Ruby on Rails"><h5 class="badge-title">Rails</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/heroku.svg" alt="Heroku"><h5 class="badge-title">Heroku</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/aws.svg" alt="Amazon Web Services"><h5 class="badge-title">AWS</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/swift.svg" alt="Swift"><h5 class="badge-title">Swift</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/xcode.svg" alt="Xcode"><h5 class="badge-title">Xcode</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/appstore.svg" alt="Apple App Store"><h5 class="badge-title">App Store</h5></div></li>
             </ul>
           </div>
         </div>
