added css animations

--- a/kenntnisse/rails.html
+++ b/kenntnisse/rails.html
@@ -26,7 +26,7 @@ devicons:
             </div>
           </div>
           <div class="card-body">
-            <h4>Ruby on Rails</h4>
+            <h4>Backend: Ruby on Rails</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/rails.svg" alt="Ruby on Rails"><h5 class="badge-title">Rails</h5></div></li>
