--- a/kenntnisse/apps.html
+++ b/kenntnisse/apps.html
@@ -23,7 +23,7 @@ devicons:
             </div>
           </div>
           <div class="card-body">
-            <h4>App-Entwicklung</h4>
+            <h4>Apps f&uuml;r OS X, iOS &amp; tvOS</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/swift.svg" alt="Swift"><h5 class="badge-title">Swift</h5></div></li>
@@ -67,7 +67,7 @@ devicons:
     <h3>tools<span class="fine white">&amp;</span><span>frameworks</span></h3>
     <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
     <ul class="collection">
-      {% for tool in site.rails_tools_frameworks %}
+      {% for tool in site.apps_tools_frameworks %}
       <li class="collection-item">
         <div class="collection-item-content">
           <div class="collection-icon-wrapper" style="background: #{{ tool.color }} url('../../images/top-banner_img_legal.svg') no-repeat center center;">
