--- a/kenntnisse/wordpress.html
+++ b/kenntnisse/wordpress.html
@@ -25,7 +25,7 @@ devicons:
             </div>
           </div>
           <div class="card-body">
-            <h4>Wordpress</h4>
+            <h4>Wordpress als CMS</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/wordpress_shield.svg" alt="Wordpress"><h5 class="badge-title">Wordpress</h5></div></li>
