--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
 
 <section class="dark-bg" id="references">
   <div class="container">
-    <h3>neueste<span>referenzen</span></h3>
+    <h3>neueste<span>arbeiten</span></h3>
     <ul class="slider-nav">
       <li class="active"></li>
       <li></li>
