--- a/index.html
+++ b/index.html
@@ -62,16 +62,9 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
 <section class="dark-bg" id="references">
   <div class="container">
     <h3>neueste<span>arbeiten</span></h3>
-    <ul class="slider-nav">
-      <li class="active"></li>
-      <li></li>
-      <li></li>
-    </ul>
-    <ul class="slider">
-      <li class="active"><img src="http://placehold.it/600x375"></li>
-      <li class="left"><img src="http://placehold.it/600x375"></li>
-      <li class="right"><img src="http://placehold.it/600x375"></li>
-    </ul>
+
+    {% include refslider.html %}
+    
   </div>
 </section>
 
