--- a/impressum.html
+++ b/impressum.html
@@ -15,7 +15,7 @@ permalink: /impressum/
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/open-sign.svg" alt="Impressum">
+              <img src="../../images/rounded_icons/open-sign.svg" alt="Impressum" data-no-retina>
             </div>
           </div>
           <div class="card-body">
@@ -39,7 +39,7 @@ permalink: /impressum/
         <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/message.svg" alt="Kontakt">
+              <img src="../../images/rounded_icons/message.svg" alt="Kontakt" data-no-retina>
             </div>
           </div>
           <div class="card-body">
