--- a/kenntnisse/frontend.html
+++ b/kenntnisse/frontend.html
@@ -22,16 +22,16 @@ devicons:
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/html5.svg" alt="Frontend-Entwicklung">
+              <img src="../../images/rounded_icons/html5.svg" alt="Frontend-Entwicklung" data-no-retina>
             </div>
           </div>
           <div class="card-body">
             <h4>Frontend-Entwicklung</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/html5.svg" alt="HTML5"><h5 class="badge-title">HTML 5</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/css3.svg" alt="CSS3"><h5 class="badge-title">CSS 3</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/js.svg" alt="JavaScript"><h5 class="badge-title">JavaScript</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/html5.svg" alt="HTML5" data-no-retina><h5 class="badge-title">HTML 5</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/css3.svg" alt="CSS3" data-no-retina><h5 class="badge-title">CSS 3</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/js.svg" alt="JavaScript" data-no-retina><h5 class="badge-title">JavaScript</h5></div></li>
             </ul>
           </div>
         </div>
@@ -40,7 +40,7 @@ devicons:
         <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks">
+              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks" data-no-retina>
             </div>
           </div>
           <div class="card-body">
