--- a/kenntnisse/rails.html
+++ b/kenntnisse/rails.html
@@ -22,16 +22,16 @@ devicons:
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/rails.svg" alt="Ruby on Rails">
+              <img src="../../images/rounded_icons/rails.svg" alt="Ruby on Rails" data-no-retina>
             </div>
           </div>
           <div class="card-body">
             <h4>Backend: Ruby on Rails</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/rails.svg" alt="Ruby on Rails"><h5 class="badge-title">Rails</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/heroku.svg" alt="Heroku"><h5 class="badge-title">Heroku</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/aws.svg" alt="Amazon Web Services"><h5 class="badge-title">AWS</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/rails.svg" alt="Ruby on Rails" data-no-retina><h5 class="badge-title">Rails</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/heroku.svg" alt="Heroku" data-no-retina><h5 class="badge-title">Heroku</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/aws.svg" alt="Amazon Web Services" data-no-retina><h5 class="badge-title">AWS</h5></div></li>
             </ul>
           </div>
         </div>
@@ -40,7 +40,7 @@ devicons:
         <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks">
+              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks" data-no-retina>
             </div>
           </div>
           <div class="card-body">
