--- a/kenntnisse/wordpress.html
+++ b/kenntnisse/wordpress.html
@@ -21,16 +21,16 @@ devicons:
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/wordpress.svg" alt="Wordpress">
+              <img src="../../images/rounded_icons/wordpress.svg" alt="Wordpress" data-no-retina>
             </div>
           </div>
           <div class="card-body">
             <h4>Wordpress als CMS</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/wordpress_shield.svg" alt="Wordpress"><h5 class="badge-title">Wordpress</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/php.svg" alt="PHP"><h5 class="badge-title">PHP</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/mysql.svg" alt="MySQL"><h5 class="badge-title">MySQL</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/wordpress_shield.svg" alt="Wordpress" data-no-retina><h5 class="badge-title">Wordpress</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/php.svg" alt="PHP" data-no-retina><h5 class="badge-title">PHP</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/mysql.svg" alt="MySQL" data-no-retina><h5 class="badge-title">MySQL</h5></div></li>
             </ul>
           </div>
         </div>
@@ -39,7 +39,7 @@ devicons:
         <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks">
+              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks" data-no-retina>
             </div>
           </div>
           <div class="card-body">
