--- a/referenzen.html
+++ b/referenzen.html
@@ -23,7 +23,7 @@ permalink: /referenzen/
               </div>
             </div>
             <div class="references-list-box-body">
-              <div class="icon-circle"><img src="{{ ref.icon | prepend: "../../images/rounded_icons/" }}" alt="{{ ref.title }}"></div>
+              <div class="icon-circle"><img src="{{ ref.icon | prepend: "../../images/rounded_icons/" }}" alt="{{ ref.title }}" data-no-retina></div>
               <h5>{{ ref.subtitle }}</h5>
               <h4>{{ ref.title }}</h4>
               <p>{{ ref.content }}</p>
