--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -14,7 +14,7 @@ permalink: /uebermich/
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/chat.svg" alt="Chat">
+              <img src="../../images/rounded_icons/chat.svg" alt="Chat" data-no-retina>
             </div>
           </div>
           <div class="card-body">
@@ -38,7 +38,7 @@ permalink: /uebermich/
         <div class="card transparent-bg last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/camera.svg" alt="Kamera">
+              <img src="../../images/rounded_icons/camera.svg" alt="Kamera" data-no-retina>
             </div>
           </div>
           <div class="card-body fullsize-img" id="profile-image">
