--- a/kenntnisse/apps.html
+++ b/kenntnisse/apps.html
@@ -19,16 +19,16 @@ devicons:
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/apple.svg" alt="Apple Apps">
+              <img src="../../images/rounded_icons/apple.svg" alt="Apple Apps" data-no-retina>
             </div>
           </div>
           <div class="card-body">
             <h4>Apps f&uuml;r OS X, iOS &amp; tvOS</h4>
             <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <ul class="badge-list">
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/swift.svg" alt="Swift"><h5 class="badge-title">Swift</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/xcode.svg" alt="Xcode"><h5 class="badge-title">Xcode</h5></div></li>
-              <li class="badge-item"><div class="badge-frame"><img src="../../images/appstore.svg" alt="Apple App Store"><h5 class="badge-title">App Store</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/swift.svg" alt="Swift" data-no-retina><h5 class="badge-title">Swift</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/xcode.svg" alt="Xcode" data-no-retina><h5 class="badge-title">Xcode</h5></div></li>
+              <li class="badge-item"><div class="badge-frame"><img src="../../images/appstore.svg" alt="Apple App Store" data-no-retina><h5 class="badge-title">App Store</h5></div></li>
             </ul>
           </div>
         </div>
@@ -37,7 +37,7 @@ devicons:
         <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
-              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks">
+              <img src="../../images/rounded_icons/tools.svg" alt="Tools &amp; Frameworks" data-no-retina>
             </div>
           </div>
           <div class="card-body">
@@ -74,7 +74,7 @@ devicons:
             {% if tool.icon %}
             <span class="{{ tool.icon }}"></span>
             {% elsif tool.icon_img %}
-            <img src="{{ tool.icon_img | prepend: "../../images/collection-icons/" }}" alt="{{ tool.title }}" class="collection-item-icon-image">
+            <img src="{{ tool.icon_img | prepend: "../../images/collection-icons/" }}" alt="{{ tool.title }}" class="collection-item-icon-image" data-no-retina>
             {% endif %}
           </div>
           <h5>{{ tool.type }}</h5>
