--- a/datenschutz.html
+++ b/datenschutz.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 title: Datenschutzerklärung
-top-banner-id: legal
+top-banner-id: datenschutz
 subtitle: <span class="green">datenschutz</span>erkl&auml;rung
 group: 'footer-menu'
 order: 2
 permalink: /datenschutz/
 ---
 
-<section class="dark-bg std-pad" id="datenschutz">
+<section class="std-pad" id="datenschutz">
   <div class="container">
     <h3><span>datenschutz</span>erkl&auml;rung</h3>
     <h4>Datenschutz</h4> <p>Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.</p> <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben.</p> <p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p>
