--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
           </div>
           <div class="card-body">
             <h4>HTML, CSS &amp; JS</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Es sind die Grundpfeiler des World Wide Web. Bei der Frontend-Entwicklung verleihen <strong>HTML5</strong> und <strong>CSS3</strong> jeder Webseite den gewünschten Look und Feel. Und <strong>JavaScript</strong> sorgt dabei für genau den richtigen Pepp.</p>
             <a href="/kenntnisse/frontend/" class="btn">Mehr erfahren</a>
           </div>
         </div>
@@ -30,7 +30,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
           </div>
           <div class="card-body">
             <h4>Ruby on Rails</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Ein starkes <strong>Backend</strong> verleiht Homepages und Web-Apps vielfältige Funktionen und Dynamik im Umgang mit Daten. Das Rails-Framework verhilft Entwicklern dazu auf <strong>effiziente</strong> Weise zu <strong>robusten</strong> Ergebnissen zu kommen.</p>
             <a href="/kenntnisse/rails/" class="btn">Mehr erfahren</a>
           </div>
         </div>
@@ -44,7 +44,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
           </div>
           <div class="card-body">
             <h4>OS X, iOS &amp; tvOS</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Wir tragen sie in der Tasche, wir nutzen sie am Arbeitsplatz: <strong>Apps</strong>. Die Plattformen von <strong>Apple</strong> sind beliebte Spielwiesen von kreativen und forschen Köpfen und bieten <strong>vielfältige Möglichkeiten</strong> für Entwickler.</p>
             <a href="/kenntnisse/apps/" class="btn">Mehr erfahren</a>
           </div>
         </div>
