--- a/kenntnisse/apps.html
+++ b/kenntnisse/apps.html
@@ -24,7 +24,7 @@ devicons:
           </div>
           <div class="card-body">
             <h4>Apps f&uuml;r OS X, iOS &amp; tvOS</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Alles begann mit <strong>Mac OS X</strong>, dann kam der Unix-Kernel auch auf das <strong>iPhone</strong>. Mittlerweile bilden iOS, OS X, tvOS und watchOS ein <strong>App-Universum</strong> voller Möglichkeiten.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/swift.svg" alt="Swift" data-no-retina><h5 class="badge-title">Swift</h5></div></li>
               <li class="badge-item"><div class="badge-frame"><img src="../../images/xcode.svg" alt="Xcode" data-no-retina><h5 class="badge-title">Xcode</h5></div></li>
@@ -65,7 +65,7 @@ devicons:
 <section class="dark-bg collection-section" id="toolsframeworks">
   <div class="container">
     <h3>tools<span class="fine white">&amp;</span><span>frameworks</span></h3>
-    <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
+    <p class="intro-text"><strong>Apple</strong> bietet seinen mittlerweile unzähligen App-Developern eine Vielzahl an <strong>Tools</strong>, <strong>Frameworks</strong>, <strong>SDKs</strong> und <strong>Devices</strong>. Im Jahr 2015 hatte die frischgebackene Programmiersprache <strong>Swift</strong> dann seinen OpenSource-Auftritt.</p>
     <ul class="collection">
       {% for tool in site.apps_tools_frameworks %}
       <li class="collection-item">
