--- a/kenntnisse/frontend.html
+++ b/kenntnisse/frontend.html
@@ -27,7 +27,7 @@ devicons:
           </div>
           <div class="card-body">
             <h4>Frontend-Entwicklung</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Die drei <strong>Grundpfeiler</strong> des Web: Standards wie <strong>HTML5</strong> und <strong>CSS3</strong> bieten vielfältige Möglichkeiten. Und <strong>jQuery</strong> verleiht Web-Anwendungen den letzten Schliff.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/html5.svg" alt="HTML5" data-no-retina><h5 class="badge-title">HTML 5</h5></div></li>
               <li class="badge-item"><div class="badge-frame"><img src="../../images/css3.svg" alt="CSS3" data-no-retina><h5 class="badge-title">CSS 3</h5></div></li>
@@ -68,7 +68,7 @@ devicons:
 <section class="dark-bg collection-section" id="toolsframeworks">
   <div class="container">
     <h3>tools<span class="fine white">&amp;</span><span>frameworks</span></h3>
-    <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
+    <p class="intro-text">Ein Leben ohne sie kann ich mir nicht mehr vorstellen: Helfer wie <strong>SASS</strong>, <strong>Autoprefixer</strong>, <strong>CodeKit</strong> und viele viele mehr erleichtern einem das Leben als Webentwickler ungemein. Der unschlagbare Vorteil: Man kann sich mehr auf den <strong>geilen Scheiß</strong> konzentrieren! ;-)</p>
     <ul class="collection">
       {% for tool in site.html_tools_frameworks %}
       <li class="collection-item">
