--- a/kenntnisse/rails.html
+++ b/kenntnisse/rails.html
@@ -27,7 +27,7 @@ devicons:
           </div>
           <div class="card-body">
             <h4>Backend: Ruby on Rails</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Schon lange <strong>den Kinderschuhen entwachsen</strong> bildet das Web-Framework die Basis für Webseiten wie Groupon, SoundCloud, Airbnb, Hulu, Github uvm.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/rails.svg" alt="Ruby on Rails" data-no-retina><h5 class="badge-title">Rails</h5></div></li>
               <li class="badge-item"><div class="badge-frame"><img src="../../images/heroku.svg" alt="Heroku" data-no-retina><h5 class="badge-title">Heroku</h5></div></li>
@@ -68,7 +68,7 @@ devicons:
 <section class="dark-bg collection-section" id="toolsframeworks">
   <div class="container">
     <h3>tools<span class="fine white">&amp;</span><span>frameworks</span></h3>
-    <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
+    <p class="intro-text">Web-Services wie <strong>Heroku</strong> und <strong>AWS</strong> bilden das Fundament einer jeden Rails-App. Dank eingebauter Asset Pipeline, SASS-Unterstützung und einer Vielzahl an <strong>Rubygems</strong> lassen sich anspruchsvolle Web-Anwendungen auf effiziente Weise realisieren.</p>
     <ul class="collection">
       {% for tool in site.rails_tools_frameworks %}
       <li class="collection-item">
