--- a/kenntnisse/wordpress.html
+++ b/kenntnisse/wordpress.html
@@ -26,7 +26,7 @@ devicons:
           </div>
           <div class="card-body">
             <h4>Wordpress als CMS</h4>
-            <p>Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Weltweit basieren <strong>mehr als die Hälfte</strong> aller CMS-gestützen Webseiten auf Wordpress. Eine Zahl, die beeindruckt und für die <strong>Qualität</strong> und <strong>Benutzerfreundlichkeit</strong> des CMS spricht.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/wordpress_shield.svg" alt="Wordpress" data-no-retina><h5 class="badge-title">Wordpress</h5></div></li>
               <li class="badge-item"><div class="badge-frame"><img src="../../images/php.svg" alt="PHP" data-no-retina><h5 class="badge-title">PHP</h5></div></li>
@@ -67,7 +67,7 @@ devicons:
 <section class="dark-bg collection-section" id="toolsframeworks">
   <div class="container">
     <h3>tools<span class="fine white">&amp;</span><span>frameworks</span></h3>
-    <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
+    <p class="intro-text">Die Vielfältigkeit an <strong>Themes</strong>, seine einfache Erweiterbarkeit auf <strong>Code- und Plugin-Ebene</strong> sowie seine <strong>Open-Source</strong>-Basis machen Wordpress zu einem beliebten Tool bei Web-Entwicklern.</p>
     <ul class="collection">
       {% for tool in site.wordpress_tools_frameworks %}
       <li class="collection-item">
