--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -21,13 +21,18 @@ permalink: /uebermich/
             <h4>Hallo, mein Name ist Florian.</h4>
             <div class="row">
               <div class="col col--6-of-12">
-                <p class="text-justify">
-                Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.<br>Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.
+                <p class="text-left">
+                  Mein Name ist <strong>Florian Weich</strong>, ich bin <span class="myage">29 Jahre</span> alt und wohne in <strong>Gesees bei Bayreuth.</strong>
+                </p>
+                <p class="text-left">
+                  Ich bin Designer, Web-Entwickler und programmiere Apps. <strong>Webseiten</strong> habe ich schon zu Schulzeiten gebastelt, <strong>Apps</strong> entwickle ich seit 2010 und Erfahrungen als <strong>Designer</strong> habe ich über die letzten Jahre hinweg ebenfalls gesammelt.
                 </p>
               </div>
               <div class="col col--6-of-12">
-                <p class="text-justify">
-                Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec id elit non mi porta gravida at eget metus. Donec ullamcorper nulla non metus auctor fringilla. Curabitur blandit tempus porttitor.
+                <p class="text-left">
+                  Seit 2013 bin ich <strong>selbstständig</strong> und habe so Erfahrungen in der Zusammenarbeit mit <strong>Kunden</strong>, <strong>Agenturen</strong> und <strong>Freelancern</strong> gewonnen. Jeder neue Auftrag ist eine neue <strong>Herausforderung</strong>.</p>
+                <p class="text-left">
+                  Aber auch eine <strong>Chance</strong>! Eine Chance sich <strong>weiterzuentwicklen</strong>, <strong>Neues</strong> auszuprobieren und <strong>Erfahrungen</strong> zu sammeln.
                 </p>
               </div>
             </div>
@@ -59,7 +64,7 @@ permalink: /uebermich/
 <section class="dark-bg collection-section" id="educationcareer">
   <div class="container">
     <h3>ausbildung<span class="fine white">&amp;</span><span>laufbahn</span></h3>
-    <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
+    <p class="intro-text">Die wichtigen Stationen meines Lebens zusammengefasst in dieser <strong>Kurz-Vita</strong>: Schule, Ausbildung, berufliche Laufbahn.</p>
     <ul class="collection">
       {% for education in site.education_career %}
       <li class="collection-item">
@@ -86,7 +91,7 @@ permalink: /uebermich/
 <section class="dark-bg collection-section" id="skillslanguages">
   <div class="container">
     <h3>kenntnisse<span class="fine white">&amp;</span><span>sprachen</span></h3>
-    <p class="intro-text">Nulla vitae elit libero, a pharetra augue. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui.</p>
+    <p class="intro-text">Ich spreche <strong>HTML</strong>. Und viele mehr... Hier eine <strong>Übersicht</strong> über Sprachen, die ich spreche und programmiere.</p>
     <ul class="collection">
       {% for skill in site.skills_languages %}
       <li class="collection-item">
