text fixes, new slider

--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -18,11 +18,11 @@ permalink: /uebermich/
             </div>
           </div>
           <div class="card-body">
-            <h4>Hallo, mein Name ist Florian.</h4>
+            <h4>Hallo, mein Name ist Flori.</h4>
             <div class="row">
               <div class="col col--6-of-12">
                 <p class="text-left">
-                  Mein Name ist <strong>Florian Weich</strong>, ich bin <span class="myage">29 Jahre</span> alt und wohne in <strong>Gesees bei Bayreuth.</strong>
+                  Mein Name ist <strong>Flori</strong>, ich bin <span class="myage">29 Jahre</span> alt und wohne in <strong>Gesees bei Bayreuth.</strong> Besser bekannt als <strong>Xees</strong>. ;-)
                 </p>
                 <p class="text-left">
                   Ich bin Designer, Web-Entwickler und programmiere Apps. <strong>Webseiten</strong> habe ich schon zu Schulzeiten gebastelt, <strong>Apps</strong> entwickle ich seit 2010 und Erfahrungen als <strong>Designer</strong> habe ich über die letzten Jahre hinweg ebenfalls gesammelt.
