--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ subtitle: designer<span class="green">&amp;</span>webentwickler
           </div>
           <div class="card-body">
             <h4>HTML, CSS &amp; JS</h4>
-            <p>Es sind die Grundpfeiler des World Wide Web. Bei der Frontend-Entwicklung verleihen <strong>HTML5</strong> und <strong>CSS3</strong> jeder Webseite den gewünschten Look und Feel. Und <strong>JavaScript</strong> sorgt dabei für genau den richtigen Pepp.</p>
+            <p>Es sind die Grundpfeiler des World Wide Web. Bei der Frontend-Entwicklung verleihen <strong>HTML5</strong> und <strong>CSS3</strong> jeder Webseite das gewünschte Look-and-feel. Und <strong>JavaScript</strong> sorgt dabei für genau den richtigen Pepp.</p>
             <a href="/kenntnisse/frontend/" class="btn">Mehr erfahren</a>
           </div>
         </div>
