Added new ref images

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 top-banner-id: home
-subtitle: designer<span class="green">&amp;</span>webentwickler
+subtitle: designer<span class="green">&amp;</span>entwickler
 ---
 
 <section class="cards" id="home-cards">
