Fixed copy writing #1 #2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ subtitle: designer<span class="green">&amp;</span>entwickler
             </div>
           </div>
           <div class="card-body">
-            <h4>OS X, iOS &amp; tvOS</h4>
+            <h4>macOS, iOS &amp; tvOS</h4>
             <p>Wir tragen sie in der Tasche, wir nutzen sie am Arbeitsplatz: <strong>Apps</strong>. Die Plattformen von <strong>Apple</strong> sind beliebte Spielwiesen von kreativen und forschen Köpfen und bieten <strong>vielfältige Möglichkeiten</strong> für Entwickler.</p>
             <a href="/kenntnisse/apps/" class="btn">Mehr erfahren</a>
           </div>
