--- a/kenntnisse/apps.html
+++ b/kenntnisse/apps.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: "OS X, iOS & tvOS"
+title: "macOS, iOS & tvOS"
 top-banner-id: apps
-subtitle: kenntnisse[<span class="green">OSX, iOS, tvOS</span>]
+subtitle: kenntnisse[<span class="green">macOS, iOS, tvOS</span>]
 permalink: /kenntnisse/apps/
 devicons:
   - apple
@@ -23,8 +23,8 @@ devicons:
             </div>
           </div>
           <div class="card-body">
-            <h4>Apps f&uuml;r OS X, iOS &amp; tvOS</h4>
-            <p>Alles begann mit <strong>Mac OS X</strong>, dann kam der Unix-Kernel auch auf das <strong>iPhone</strong>. Mittlerweile bilden iOS, OS X, tvOS und watchOS ein <strong>App-Universum</strong> voller Möglichkeiten.</p>
+            <h4>Apps f&uuml;r macOS, iOS &amp; tvOS</h4>
+            <p>Alles begann mit <strong>Mac OS X</strong>, dann kam der Unix-Kernel auch auf das <strong>iPhone</strong>. Mittlerweile bilden iOS, macOS, tvOS und watchOS ein <strong>App-Universum</strong> voller Möglichkeiten.</p>
             <ul class="badge-list">
               <li class="badge-item"><div class="badge-frame"><img src="../../images/swift.svg" alt="Swift" data-no-retina><h5 class="badge-title">Swift</h5></div></li>
               <li class="badge-item"><div class="badge-frame"><img src="../../images/xcode.svg" alt="Xcode" data-no-retina><h5 class="badge-title">Xcode</h5></div></li>
