Added CV as pdf download #3

--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -79,6 +79,7 @@ permalink: /uebermich/
       </li>
       {% endfor %}
     </ul>
+    <p class="cv clearfix"><a href="../downloads/florian-weich_cv_2016.pdf" class="btn btn-white" title="Download Kurz-Vita Florian Weich" target="_blank"><i class="fa fa-file-text-o" aria-hidden="true"></i> Download CV (PDF)</a></p>
   </div>
 </section>
 
