Added USt-ID and backdrop-filter on navigation

--- a/impressum.html
+++ b/impressum.html
@@ -26,6 +26,9 @@ permalink: /impressum/
               Am Anger 2<br>
               95494 Gesees
             </p>
+            <p>
+              <strong>Umsatzsteuer-Identifikationsnummer:</strong><br />DE287488789
+            </p>
             <h4>Verantwortlich f&uuml;r den Inhalt nach § 55 Abs. 2 RStV:</h4>
             <p>
               Florian Weich<br>
