--- a/impressum.html
+++ b/impressum.html
@@ -10,8 +10,8 @@ permalink: /impressum/
 
 <section class="cards" id="imprint">
   <div class="container">
-    <div class="row">
-      <div class="col col--8-of-12">
+    <div class="row flex-desktop">
+      <div class="col col--8-of-12 flex-desktop">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -38,7 +38,7 @@ permalink: /impressum/
           </div>
         </div>
       </div>
-      <div class="col col--4-of-12">
+      <div class="col col--4-of-12 flex-desktop">
         <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
