--- a/kenntnisse/wordpress.html
+++ b/kenntnisse/wordpress.html
@@ -16,8 +16,8 @@ devicons:
 
 <section class="cards" id="skills-cards">
   <div class="container">
-    <div class="row">
-      <div class="col col--8-of-12">
+    <div class="row flex-desktop">
+      <div class="col col--8-of-12 flex-desktop">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -35,7 +35,7 @@ devicons:
           </div>
         </div>
       </div>
-      <div class="col col--4-of-12">
+      <div class="col col--4-of-12 flex-desktop">
         <div class="card last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
