--- a/ueber_mich.html
+++ b/ueber_mich.html
@@ -9,8 +9,8 @@ permalink: /uebermich/
 
 <section class="cards" id="aboutme-cards">
   <div class="container">
-    <div class="row">
-      <div class="col col--8-of-12">
+    <div class="row flex-desktop">
+      <div class="col col--8-of-12 flex-desktop">
         <div class="card">
           <div class="card-header wide" id="card-bg-01">
             <div class="icon-circle">
@@ -39,7 +39,7 @@ permalink: /uebermich/
           </div>
         </div>
       </div>
-      <div class="col col--4-of-12">
+      <div class="col col--4-of-12 flex-desktop">
         <div class="card transparent-bg last">
           <div class="card-header" id="card-bg-03">
             <div class="icon-circle">
